# vkd3d

./: .gitignore  config_h_gen.py  meson.build
include/: meson.build  vkd3d_dxgi.idl  vkd3d_dxgi1_2.idl  vkd3d_dxgi1_3.idl  vkd3d_dxgi1_4.idl  vkd3d_dxgi1_5.idl  vkd3d_dxgi1_6.idl  vkd3d_unknown.idl  vkd3d_windows.h  vkd3d_wine_dxgi.idl
include/private/: vkd3d_common.h  vkd3d_debug.h  vkd3d_pthread.h
libs/: meson.build
libs/d3d12/: d3d12_main.c  meson.build
libs/dxgi/: adapter.c  device.c  dxgi_main.c  dxgi_private.h  meson.build
libs/vkd3d/: command.c  device.c  meson.build  resource.c  utils.c  vkd3d_private.h
libs/vkd3d-common/: debug.c  meson.build
libs/vkd3d-shader/: meson.build
programs/: meson.build
